# ha-xthings

./: .gitignore  .instructions.md  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  hacs.json  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/: labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: hassfest.yml  labeler.yml  lint.yml  release-drafter.yml  release.yml  validate.yml
custom_components/xthings/: __init__.py  api.py  application_credentials.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  lock.py  manifest.json  models.py  sensor.py  strings.json  webhook.py
docker/: configuration.yaml
docs/articles/: 39731959004057-What-is-Xthings-OpenAPI.md  39732578812569-Getting-Started-with-Xthings-OpenAPI.md  39734798548377-Xthings-OpenAPI-Interface-Framework.md  39867633454361-Developer-Foundational-APIs.md  39870254872985-Event-Notification.md  39872557445785-Category-Reference.md  39872638936217-Device-Handler-Types-Reference.md  39908868485273-Production-Capabilities.md  45031654798873-Register-URIs-for-Xthings-Home-related-event-notifications.md  45032812850841-Retrieve-User-Information-using-Xthings-API.md  45034280007065-User-Unlink-using-Xthings-API.md  45074617158681-Lock-Control-using-Xthings-API.md  45074836139801-Lock-Mode-Setting-using-Xthings-API.md  45075158508441-Switch-Control-using-Xthings-API.md  (+5 more)
scripts/: develop  precheck
tests/: conftest.py  manual_api_live.py  test_integration.py  test_unit.py
(+3 files in other folders)
